This commit was manufactured by cvs2svn to create tag 'DTP_1_9_0_M4_201012110500'.
Sprout from master 2010-11-23 19:58:29 UTC Linda Chan <lchan@actuate.com> '[330873] Enable the ODA Runtime framework to run on non-OSGi platform'
Cherrypick from master 2009-09-14 09:32:19 UTC Lin Zhu <lzhu@actuate.com> 'CheckIn:Enhance the exception error message.':
    plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/DataTypes.java
    plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/ResultSetMetaData.java
    plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/ResultSetMetaDataHelper.java
    plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/util/DateFormatFactory.java
    plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/util/FlatFileDataReader.java
    plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/util/querytextutil/ColumnsInfoUtil.java
Cherrypick from DTP_1_8_2_Branch 2010-11-10 06:20:25 UTC Lin Zhu <lzhu@actuate.com> 'CheckIn:Fix issue Fetching data time data from flat file is very slow [34034]':
    plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/FlatFileQuery.java
    plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/ResultSet.java
    plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/util/DateFormatISO8601.java
    plugins/org.eclipse.datatools.connectivity.oda.flatfile/src/org/eclipse/datatools/connectivity/oda/flatfile/util/DateUtil.java
Delete:
    examples/org.eclipse.datatools.connectivity.oda.jdbc.dbprofile.sample.ui/.classpath
    examples/org.eclips